[gd_scene load_steps=9 format=3 uid="uid://btjcktrnlkns5"]

[ext_resource type="Script" uid="uid://bpvg44g1tfkur" path="res://Scripts/Objects/ObjectScript.gd" id="1_7u4ih"]
[ext_resource type="Texture2D" uid="uid://govrqiogvruk" path="res://Assets/Objects/Object-sample.png" id="1_kcwus"]
[ext_resource type="Texture2D" uid="uid://bxtnw2yg8kufj" path="res://Assets/UI/Cloud-sample.png" id="5_j8t0w"]
[ext_resource type="Texture2D" uid="uid://b688x37b6ymjw" path="res://Assets/UI/HUD/ScrewIcon.png" id="6_kl0dh"]
[ext_resource type="Texture2D" uid="uid://8uc1h3alye2" path="res://Assets/UI/Modifier-sample.png" id="7_ap2ik"]

[sub_resource type="Animation" id="Animation_b2x3e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bjyfc"]
resource_name = "Sparks"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7, 0.8, 0.9, 1.2, 1.3, 1.5, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlges"]
_data = {
&"RESET": SubResource("Animation_b2x3e"),
&"Sparks": SubResource("Animation_bjyfc")
}

[node name="Object" type="TextureButton"]
offset_left = -14.0
offset_top = -14.0
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(0.933333, 0.966667)
texture_normal = ExtResource("1_kcwus")
texture_pressed = ExtResource("1_kcwus")
texture_hover = ExtResource("1_kcwus")
texture_disabled = ExtResource("1_kcwus")
script = ExtResource("1_7u4ih")
ColorBugged = Color(0.870505, 0.00445975, 0.369701, 1)
ColorUnusable = Color(0.488054, 0.488054, 0.488054, 1)

[node name="CloudPopUp" type="Control" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.2143
offset_top = -47.5862
offset_right = 37.2143
offset_bottom = -26.5862
grow_horizontal = 2
grow_vertical = 2

[node name="CloudImage" type="TextureRect" parent="CloudPopUp"]
layout_mode = 0
offset_left = 1.07142
offset_top = 1.14441e-05
offset_right = 49.0714
offset_bottom = 51.0
texture = ExtResource("5_j8t0w")

[node name="Icon" type="TextureRect" parent="CloudPopUp/CloudImage"]
layout_mode = 0
offset_left = 21.4286
offset_top = 10.3448
offset_right = 38.5714
offset_bottom = 25.3448
texture = ExtResource("6_kl0dh")
expand_mode = 3

[node name="Modifier" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -8.57143
offset_top = -15.5172
offset_right = 39.4286
offset_bottom = 33.4828
texture = ExtResource("7_ap2ik")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Modifier"]
libraries = {
"": SubResource("AnimationLibrary_xlges")
}

[node name="FlowContainer" type="FlowContainer" parent="."]
z_index = 50
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
